- package completion
- basic annotation support in internal pdf viewer
- improved render speed, especially on mac
- speed-up loading of hidden documents (option: automatically load included files)
- speed-up command completion window, especially citations
- improved log panel
- improved dtx highlighting
- added support for LilyPond book (.lytex)
- fix: input method bug
- fix: shortcuts containing arrow keys did not work in japanese
- bug fixes, e.g. tooltip does not disappear instantly anymore

TeXstudio 2.6.0 -> TeXstudio 2.6.2
-----------------------------------------
- structure tree view: context menu entries to recursively collapse/expand the structure
- improved hard line wrap with joining lines
- View -> Focus Viewer now also works for the windowed viewer
- better detection of LagnuageTool
- similarity dictionary
- "Align Table Columns" now works also for tabu/longtabu
- updated poppler library, now displays PDF annotations like highlight and underline
- updated to Qt 4.8.5 (Windows installer)
- fix: user templates are editable again
- fix: broken SVN Undo
- fix: bug when typing '}' in RTL languages
- fix: pinyin input method problem on mac
- fix: Opening package documentation in non-PDF formats
- more small corrections and improvements

TeXstudio 2.5.2 -> TeXstudio 2.6.0
-----------------------------------------
- Retina Mac support
- switched to svg icons
- folded lines are now stored in the session
- option to load package documentation into internal embedded pdf viewer
- option to silently reload files on external changes
- make %todo as well as %TODO marker for "to-do" list
- "Align Table Columns" now works on many more enviroments such as 
  matrix, align. align*, split, multline, multline*, gather, gather*, flalign, flalign*, alignat, alignat*
- template resources are now configured via template_resources.xml (allows to customize resource locations)
- template json files are now UTF-8
- basic Pweave highlighting