@@ -106,6 +106,7 @@
 <li><p>improved log panel</p></li>
 <li><p>improved dtx highlighting</p></li>
 <li><p>added support for LilyPond book (.lytex)</p></li>
+<li><p>Edit -> Line operations now also work with selections</p></li>
 <li><p>fix: input method bug</p></li>
 <li><p>fix: shortcuts containing arrow keys did not work in japanese</p></li>
 <li><p>more bug fixes, e.g. tooltip does not disappear instantly anymore</p></li>
